--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media(max-width:1000px){
+@media all and (max-width:1000px){
   .top-wrapper h1{
     font-size:30px;
   }
@@ -13,7 +13,7 @@
   }
 }
 
-@media(max-width:670px){
+@media all and (max-width:670px){
   .header-right{
     display:none;
   }
