--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media  (max-width:800px){
+@media all and (max-width:800px){
   .top-wrapper h1{
     font-size:30px;
   }
@@ -7,13 +7,14 @@
   }
   .lesson{
     width:50%;
+    margin-bottom:50px;
   }
   footer{
     text-align:center;
   }
 }
 
-@media  (max-width:500px){
+@media all and (max-width:500px){
   .header-right{
     display:none;
   }
@@ -29,11 +30,13 @@
   .top-wrapper p{
     font-size:14px;
   }
+  .facebook{
+    margin-bottom:10px;
+  }
   .btn{
     width:100%;
   }
   .lesson{
     width:100%;
   }
-
 }
