--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,7 +39,7 @@ header {
   float: right;
   font-size: 25px;
   padding: 21px 0;
-  display:none;
+  display:none !important;
 }
 .header-right {
   float:right;
